# Hydrox_Engine

./: .gitignore  CMakeLists.txt  README.md
HydroxLoader/: CMakeLists.txt
HydroxLoader/include/Loader/: AssimpLoader.h  CMakeLists.txt  ComputeShaderLoader.h  HEFLoader.h  ILDevilLoader.h  MaterialLoader.h  MeshLoader.h  NodeStreaming.h  NodeWrapper.h  NodeWrapperMapper.h  RenderShaderLoader.h  ResourceLoader.h  ShaderLoader.h  TreeNodeFactory.h
HydroxLoader/lib/Debug/: Hydrox_Loader.exp  Hydrox_Loader.lib
HydroxLoader/lib/Release/: Hydrox_Loader.exp  Hydrox_Loader.lib
HydroxLoader/src/Loader/: AssimpLoader.cpp  CMakeLists.txt  ComputeShaderLoader.cpp  HEFLoader.cpp  ILDevilLoader.cpp  MaterialLoader.cpp  MeshLoader.cpp  NodeStreaming.cpp  NodeWrapper.cpp  RenderShaderLoader.cpp  ResourceLoader.cpp  ShaderLoader.cpp  TreeNodeFactory.cpp
HydroxRenderer/: CMakeLists.txt
HydroxRenderer/include/Renderer/: CMakeLists.txt
HydroxRenderer/include/Renderer/Buffer/: CMakeLists.txt  GPUBuffer.h  GPUImmutableBuffer.h  SSBO.h  TBO.h  UBO.h
HydroxRenderer/include/Renderer/OpenGLDebugLogger/: CMakeLists.txt  DebugMessageHandler.h  OpenGLDebugLogManager.h
HydroxRenderer/include/Renderer/Pipeline/: ArrayDrawCommand.h  BillboardRenderer.h  CMakeLists.txt  CameraManager.h  DelaunayTriangulation.h  DrawCommandInterface.h  FinalCompositing.h  FrustumCullingGPU.h  GBuffer.h  GeometryCommandInterface.h  GeometryRasterizer.h  GeometryRenderer.h  IndexedDrawCommand.h  IndirectLightRenderer.h  IndirectShadowsCreation.h  IndirectSpecularReflections.h  LightRenderer.h  ParticleRenderer.h  RasterizerRenderManager.h  RenderManager.h  RenderOptions.h  RenderShaderContainer.h  RenderingOptions.h  Renderquad.h  Renderquad2D.h  Renderquad3D.h  SamplerObject.h  SkinnedGeometryRenderCommand.h  SkyboxRenderer.h  SpriteRenderer.h  StaticGeometryRenderCommand.h  StringRenderer2D.h  Tonemapper.h
HydroxRenderer/include/Renderer/RenderTree/: AnimatedRenderNode.h  CMakeLists.txt  DeleteTraverser.h  GroupNode.h  InsertGeometryTraverser.h  RemoveGeometryTraverser.h  RenderGeometryTraverser.h  RenderNode.h  ShaderNode.h  StaticRenderNode.h  TextureNode.h  Traverser.h  TreeNode.h  VertexDeclarationNode.h
HydroxRenderer/include/Renderer/Renderdata/: CMakeLists.txt  DrawArrayRenderData.h  DrawElementsRenderData.h  IDrawRenderData.h  IInstanceRenderData.h  IMaterialRenderData.h  IMatrixRenderData.h  IRenderContainer.h  MaterialRenderData.h  RenderContainer.h  RenderDataFactory.h  SkinnedInstancesRenderData.h  SkinnedMatrixRenderData.h  StaticInstancesRenderData.h  StaticMatrixRenderData.h
HydroxRenderer/include/Renderer/Renderpass/: AComputepass.h  ARenderpass.h  CMakeLists.txt  DebugGeometryRenderpass.h  FrustumCullingRenderpass.h  GeometryRenderpass.h  IndexGeometryRenderpass.h  IndirectBackprojectionRenderpass.h  IndirectLightEdgeVertexExtractionGeometryRenderpass.h  IndirectLightGeometryRenderpass.h  NoLightingGeometryRenderpass.h  ParaboloidShadowMapGeometryRenderpass.h  ReflectiveShadowMapGeometryRenderpass.h  ShaderNode.h  ShadowMapGeometryRenderpass.h  TextureNode.h  VertexDeclarationNode.h
HydroxRenderer/include/Renderer/Resources/: AABB.h  Billboard.h  CMakeLists.txt  ComputeShader.h  Light.h  ManagedResource.h  Material.h  Mesh.h  Particle.h  ParticleEmitter.h  RenderShader.h  ResourceManager.hpp  Shader.h  Sprite.h  Texture.h  Texture2D.h  Texture3D.h  TextureArray.h
HydroxRenderer/include/Renderer/String/: CMakeLists.txt  StringTexture2D.h  StringTexture3D.h
HydroxRenderer/include/Renderer/Traverser/: CMakeLists.txt  ConstTraverser.h  DeleteTraverser.h  FrustumCullingTraverser.h  InsertGeometryTraverser.h  InsertGeometryTraverserDebug.h  InsertGeometryTraverserIndexPass.h  InsertGeometryTraverserIndirectLightingPass.h  InsertGeometryTraverserReflectiveShadowPass.h  InsertGeometryTraverserRenderPass.h  InsertGeometryTraverserShadowPass.h  InsertReflectiveShadowGeometryTraverser.h  InsertShadowGeometryTraverser.h  InsertSkinnedGeometryTraverser.h  InsertSkinnedGeometryTraverser.inl  InsertStaticGeometryTraverser.h  InsertStaticGeometryTraverser.inl  RemoveGeometryTraverser.h  RemoveGeometryTraverserDebug.h  RemoveGeometryTraverserIndexPass.h  Traverser.h  (+14 more)
HydroxRenderer/lib/Debug/: Hydrox_Renderer.exp  Hydrox_Renderer.lib
HydroxRenderer/lib/Release/: Hydrox_Renderer.exp  Hydrox_Renderer.lib
HydroxRenderer/src/Renderer/: CMakeLists.txt
HydroxSaver/: CMakeLists.txt
HydroxSaver/include/Saver/: CMakeLists.txt  CreateDirectory.h  HEFSaver.h  ILDevilSaver.h  MaterialSaver.h  MeshSaver.h  NodeExtractionTraverser.h  NodeLinkTraverser.h  NodeStreaming.h  NodeWrapper.h  NodeWrapperMapper.h  RenderShaderSaver.h
HydroxSaver/src/Saver/: CMakeLists.txt  CreateDirectory.cpp  HEFSaver.cpp  ILDevilSaver.cpp  MaterialSaver.cpp  MeshSaver.cpp  NodeExtractionTraverser.cpp  NodeLinkTraverser.cpp  NodeStreaming.cpp  NodeWrapper.cpp  RenderShaderSaver.cpp
HydroxSceneGraph/: CMakeLists.txt
HydroxSceneGraph/include/SceneGraph/: CMakeLists.txt
HydroxSceneGraph/lib/Debug/: Hydrox_SceneGraph.exp  Hydrox_SceneGraph.lib
HydroxSceneGraph/lib/Release/: Hydrox_SceneGraph.exp  Hydrox_SceneGraph.lib
HydroxSceneGraph/src/SceneGraph/: CMakeLists.txt
HydroxUtilities/: CMakeLists.txt
HydroxUtilities/include/Utilities/: CMakeLists.txt
HydroxUtilities/lib/Debug/: Hydrox_Utilities.exp  Hydrox_Utilities.lib
HydroxUtilities/lib/Release/: Hydrox_Utilities.exp  Hydrox_Utilities.lib
HydroxUtilities/src/Utilities/: CMakeLists.txt
include/Hydrox/Singletons/: CMakeLists.txt  CacheManager.hpp  DebugLogManager.h  DebugMessageHandler.h  RasterizerRenderManager.h  RaytracingRenderManager.h  RenderManager.h  Singleton.hpp
src/Hydrox/Services/: CMakeLists.txt  CachedResource.cpp  Camera.cpp  DebugLogManager.cpp  DebugMessageHandler.cpp  InputManager.cpp  RasterizingRenderManager.cpp  RaytracingRenderManager.cpp  RenderManager.cpp
src/Hydrox/Singletons/: CMakeLists.txt  CachedResource.cpp  DebugLogManager.cpp  DebugMessageHandler.cpp  RasterizingRenderManager.cpp  RaytracingRenderManager.cpp  RenderManager.cpp
(+1105 files in other folders)
